force-app/main/default/objects/ICX_Queue__mdt/ICX_Queue__mdt.object-meta.xml
<CustomObject>
    <description>[ICONiCS] 
1- Replace old @louisvuitton.com email queue by new @contact.louisvuitton.com email queue.
Used for CSC (ICONiCS) users when they replied by email to not see in CC field (@louisvuitton.com)
2- Find default Email Template for a queue</description>
    <label>ICX Queue</label>
    <pluralLabel>Queues</pluralLabel>
</CustomObject>