force-app/main/default/objects/ICX_Queue__mdt/fields/CountryIso3Code__c.field-meta.xml
<CustomField>
    <fullName>CountryIso3Code__c</fullName>
    <description>Country in 3 caracters. 
Used to update the Country fields in the Case by Process Builder + Flow</description>
    <label>Country ISO3 Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>