force-app/main/default/objects/ICX_Queue__mdt/fields/CurrentEmail__c.field-meta.xml
<CustomField>
    <fullName>CurrentEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Current old email
Format : contact_[country]@louisvuitton.com</description>
    <label>CurrentEmail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>