force-app/main/default/objects/ICX_Queue__mdt/fields/DPCA_Email_Template_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DPCA_Email_Template_DeveloperName__c</fullName>
    <label>DPCA Email Template DeveloperName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>