force-app/main/default/objects/ICX_Queue__mdt/fields/EmailTemplateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateDeveloperName__c</fullName>
    <description>Default Email Template for a queue</description>
    <label>Email Template DeveloperName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>