force-app/main/default/objects/ICX_Queue__mdt/fields/IsCSC__c.field-meta.xml
<CustomField>
    <fullName>IsCSC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to know if the related country is for a CSC</description>
    <label>IsCSC</label>
    <type>Checkbox</type>
</CustomField>