force-app/main/default/objects/ICX_Queue__mdt/fields/MigratedToGenesys__c.field-meta.xml
<CustomField>
    <fullName>MigratedToGenesys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated To Genesys</label>
    <type>Checkbox</type>
</CustomField>