force-app/main/default/objects/ICX_Queue__mdt/fields/PriorityQueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PriorityQueueDeveloperName__c</fullName>
    <label>Priority Queue DeveloperName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>