force-app/main/default/objects/ICX_Queue__mdt/fields/QueueDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>QueueDeveloperName__c</fullName>
    <description>DeveloperName for the queue (useful to find the default email template depending on the queue developer name)</description>
    <label>Queue DeveloperName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>