force-app/main/default/objects/ICX_Queue__mdt/fields/TargetEmail__c.field-meta.xml
<CustomField>
    <fullName>TargetEmail__c</fullName>
    <description>Target new email 
Format : [country]@contact.louisvuitton.com</description>
    <label>Target Email</label>
    <type>Email</type>
</CustomField>