force-app/main/default/objects/ICX_Queue__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>QueueDeveloperName__c</columns>
    <columns>DPCA_Email_Template_DeveloperName__c</columns>
    <columns>MigratedToGenesys__c</columns>
    <columns>EmailTemplateDeveloperName__c</columns>
    <columns>CurrentEmail__c</columns>
    <columns>TargetEmail__c</columns>
    <columns>IsCSC__c</columns>
    <columns>PriorityQueueDeveloperName__c</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>CountryIso3Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>